// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Card test Preview is ok 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
    data-testid="project-card-dummy_nametestOrg"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
    >
      <div
        class="Layout--horizontal StyledProps--main cardHeader StyledProps--flex StyledProps--flex-justifyContent-flex-end"
      />
      <div
        class="StyledProps--font StyledProps--main"
        data-testid="card-content"
      >
        <div
          class="colorBar"
          style="background-color: rgb(0, 99, 247);"
        />
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 1;"
        >
          dummy name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-medium"
          style="--text-line-clamp: 1;"
        >
          idLabel
        </p>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-small"
            >
              adminLabel
               
              (1)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -10px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 16px; width: 24px; height: 24px; font-size: 20px; font-weight: 200;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="19bYA-ooQZOTZQxf2N-VPA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-small"
            >
              collaboratorsLabel
               
              (5)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -10px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 16px; width: 24px; height: 24px; font-size: 20px; font-weight: 200;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="BnTbQTIJS4SkadzYv0BcbA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                + 4
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main started StyledProps--padding-top-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-xsmall"
          >
            modules
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cd-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                  fill="url(#cd-main_svg__a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="cd-main_svg__a"
                    x1="6.774"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ci-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                  fill="url(#ci-main_svg__a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="ci-main_svg__a"
                    x1="-5.398"
                    x2="11.398"
                    y1="11.398"
                    y2="37.398"
                  >
                    <stop
                      stop-color="#73DFE7"
                    />
                    <stop
                      offset="1"
                      stop-color="#0095F7"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cf-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cf-main_svg__a"
                  x1="6.837"
                  x2="23.78"
                  y1="2"
                  y2="28.227"
                >
                  <stop
                    offset="0"
                    stop-color="#ffc100"
                  />
                  <stop
                    offset="1"
                    stop-color="#e66b35"
                  />
                </lineargradient>
                <g
                  fill="url(#cf-main_svg__a)"
                >
                  <path
                    d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.463 1.316a.2.2 0 00.208-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.398 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012z"
                  />
                  <path
                    d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.265.902z"
                  />
                </g>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cv-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cv-main_svg__a"
                  x1="7.5"
                  x2="20.926"
                  y1="3"
                  y2="28.987"
                >
                  <stop
                    offset="0"
                    stop-color="#bea1ff"
                  />
                  <stop
                    offset="1"
                    stop-color="#8a36ff"
                  />
                </lineargradient>
                <g
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    d="M25.933 24.357A12.972 12.972 0 0116 28.969a12.972 12.972 0 01-9.933-4.612l6.026-3.834A5.976 5.976 0 0016 21.969a5.977 5.977 0 003.907-1.446zm1.066-1.455l-5.906-3.759a6.001 6.001 0 00-4.193-9.107V3C23.66 3.462 29 9.092 29 15.97a12.94 12.94 0 01-2 6.932zM15.1 3C8.34 3.462 3 9.092 3 15.97c0 2.548.733 4.925 2 6.932l5.907-3.759a6.001 6.001 0 014.192-9.107z"
                    fill="url(#cv-main_svg__a)"
                  />
                  <path
                    d="M19.558 13.286a.9.9 0 01-.044 1.272l-4.286 4a.9.9 0 01-1.228 0l-1.714-1.6a.9.9 0 011.228-1.316l1.1 1.027 3.672-3.427a.9.9 0 011.272.044z"
                    fill="#ae82fc"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Card test initializes ok  1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 Card--card projectCard Card--interactive"
    data-testid="project-card-dummy_nametestOrg"
    tabindex="0"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
    >
      <div
        class="Layout--horizontal StyledProps--main cardHeader StyledProps--flex StyledProps--flex-justifyContent-flex-end"
      >
        <div
          class="Card--cardMenu menu"
        >
          <div
            class="Card--dots"
          >
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-more StyledProps--main"
                    icon="more"
                  >
                    <svg
                      data-icon="more"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        more
                      </desc>
                      <path
                        d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
        data-testid="card-content"
      >
        <div
          class="colorBar"
          style="background-color: rgb(0, 99, 247);"
        />
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--margin-bottom-small"
          style="--text-line-clamp: 1;"
        >
          common.org
          : 
          Org Name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 1;"
        >
          dummy name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-medium"
          style="--text-line-clamp: 1;"
        >
          idLabel
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tagClassName"
                style="max-width: 75px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tagClassName"
                style="max-width: 75px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag2:tag3
                </span>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  tabindex="0"
                >
                  plus3
                </p>
              </span>
            </span>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-small"
            >
              adminLabel
               
              (1)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -10px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 16px; width: 24px; height: 24px; font-size: 20px; font-weight: 200;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="19bYA-ooQZOTZQxf2N-VPA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-small"
            >
              collaboratorsLabel
               
              (5)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -10px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 16px; width: 24px; height: 24px; font-size: 20px; font-weight: 200;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="BnTbQTIJS4SkadzYv0BcbA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                + 4
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main started StyledProps--padding-top-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-xsmall"
          >
            modules
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cd-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                  fill="url(#cd-main_svg__a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="cd-main_svg__a"
                    x1="6.774"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ci-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                  fill="url(#ci-main_svg__a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="ci-main_svg__a"
                    x1="-5.398"
                    x2="11.398"
                    y1="11.398"
                    y2="37.398"
                  >
                    <stop
                      stop-color="#73DFE7"
                    />
                    <stop
                      offset="1"
                      stop-color="#0095F7"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cf-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cf-main_svg__a"
                  x1="6.837"
                  x2="23.78"
                  y1="2"
                  y2="28.227"
                >
                  <stop
                    offset="0"
                    stop-color="#ffc100"
                  />
                  <stop
                    offset="1"
                    stop-color="#e66b35"
                  />
                </lineargradient>
                <g
                  fill="url(#cf-main_svg__a)"
                >
                  <path
                    d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.463 1.316a.2.2 0 00.208-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.398 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012z"
                  />
                  <path
                    d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.265.902z"
                  />
                </g>
              </svg>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="cv-main"
            >
              <svg
                height="20"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cv-main_svg__a"
                  x1="7.5"
                  x2="20.926"
                  y1="3"
                  y2="28.987"
                >
                  <stop
                    offset="0"
                    stop-color="#bea1ff"
                  />
                  <stop
                    offset="1"
                    stop-color="#8a36ff"
                  />
                </lineargradient>
                <g
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    d="M25.933 24.357A12.972 12.972 0 0116 28.969a12.972 12.972 0 01-9.933-4.612l6.026-3.834A5.976 5.976 0 0016 21.969a5.977 5.977 0 003.907-1.446zm1.066-1.455l-5.906-3.759a6.001 6.001 0 00-4.193-9.107V3C23.66 3.462 29 9.092 29 15.97a12.94 12.94 0 01-2 6.932zM15.1 3C8.34 3.462 3 9.092 3 15.97c0 2.548.733 4.925 2 6.932l5.907-3.759a6.001 6.001 0 014.192-9.107z"
                    fill="url(#cv-main_svg__a)"
                  />
                  <path
                    d="M19.558 13.286a.9.9 0 01-.044 1.272l-4.286 4a.9.9 0 01-1.228 0l-1.714-1.6a.9.9 0 011.228-1.316l1.1 1.027 3.672-3.427a.9.9 0 011.272.044z"
                    fill="#ae82fc"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
